change personal info API (no check for username unique)
